--- a/demo.html
+++ b/demo.html
@@ -58,11 +58,14 @@
         <section class="search-overlay">
             <div class="btn-wrapper">
                 <a class="btn close" href="#"></a>
+                <form action="">
+                    <input type="search">
+                </form>
             </div>      
         </section>
         <section class="add-note-overlay">
             <h1 class="title">Notes</h1>
-            <form action="" class="add-note-form">
+            <form action="" class="form">
                 <div class="form-group">
                     <label for="title">Title</label>
                     <div class="input-field__wrapper">
@@ -86,7 +89,38 @@
                         <input id="add_form" type="submit" class="submit-content form-btn" value="Add">
                     </div>
                     <div class="form-btn__wrapper">
-                        <input id="close_form" type="button" class="close-form form-btn" value="Cancel">
+                        <input id="close_add_form" type="button" class="close-form form-btn" value="Cancel">
+                    </div>
+                </div>
+            </form>
+        </section>
+        <section class="edit-note-overlay">
+            <h1 class="title">Edit</h1>
+            <form action="" class="form">
+                <div class="form-group">
+                    <label for="title">Title</label>
+                    <div class="input-field__wrapper">
+                        <input id="edit-note-title" type="text" name="title" class="input-field">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="content">Content</label>
+                    <div class="input-field__wrapper">
+                        <textarea id="edit-note-content"  name="content" id="content" cols="30" rows="10" class="input-field"></textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="tag">Tag</label>
+                    <div class="input-field__wrapper">
+                        <input id="edit-note-tag"  type="text" name="tag" class="input-field">
+                    </div>
+                </div>
+                <div class="form-group btn-group">
+                    <div class="form-btn__wrapper">
+                        <input id="add_edit_form" type="submit" class="submit-content form-btn" value="Edit">
+                    </div>
+                    <div class="form-btn__wrapper">
+                        <input id="close_edit_form" type="button" class="close-form form-btn" value="Cancel">
                     </div>
                 </div>
             </form>
