add select filter tag , have problem about unique option

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
                             <i class="fa fa-trash" aria-hidden="true"></i>
                         </a>
                     </div>
+                    <div class="fitler-wrapper">
+                        <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                        <select name="select-tag" id="filter-tag" class="tag">
+                            <option value="all" selected>All</option>
+                        </select>
+                    </div>
+
                 </nav>
             </header>
             <ul class="note-wrapper">
