--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <!-- font awesome -->
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="flaticon/font/flaticon.css">
 
     <link rel="stylesheet" href="css/demo.css">
-
     <!-- FONT  -->
     <link href="https://fonts.googleapis.com/css2?family=Redressed&family=Poppins:wght@200;400;500;600;700;800&display=swap" rel="stylesheet">
 
@@ -20,86 +20,97 @@
         <div class="main-wrapper">
             <header class="header">
                 <h1 class="title">Notes</h1>
-                <nav class="nav-bar">
-                    <div class="btn-wrapper">
-                        <a class="btn btn-active search" href="#">
-                            <i class="fa fa-search" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                    <div class="btn-wrapper">
-                        <a class="btn edit" href="#">
-                            <i class="fas fa-pen-alt    "></i>
-                        </a>
-                    </div>
-                    <div class="btn-wrapper">
-                        <a class="btn delete" href="#">
-                            <i class="fa fa-trash" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                    <div class="fitler-wrapper">
+                <nav class="header-nav">
+                    <a class="edit" href="#">
+                        Edit
+                    </a>
+                    <a class="delete" href="#">
+                        <i class="fa fa-trash" aria-hidden="true"></i>
+                    </a>
+                    <a href="#" class="active theme">
+                        <i class="fas fa-moon    "></i>
+                        <i class="fas fa-sun    "></i>
+                    </a>
+                    <a class="add-note add-active"  href="#">
+                        <i class="flaticon-add-file"></i>
+                    </a>
+                    <a class="add-folder"  href="#">
+                        <i class="fa fa-plus" aria-hidden="true"></i>
+                    </a>
+                    <!-- <div class="fitler-wrapper">
                         <i class="fa fa-chevron-down" aria-hidden="true"></i>
                         <select name="select-tag" id="filter-tag" class="tag">
                             <option value="all" selected>All</option>
                         </select>
-                    </div>
+                    </div> -->
 
                 </nav>
             </header>
-            <ul class="note-wrapper">
-                <li class="gutter-sizer"></li>
-                <li class="message">
-                    <span>There isn't any note yet !</span>
-                </li>
-                <!-- <li class="note">
-                    <h1 class="note__title">Title</h1>
-                    <p class="note__content">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi debitis dolorum esse dolorem odio! Enim ullam qui saepe voluptate exercitationem libero minima dolor optio. Quasi repellat ipsa facere reiciendis cumque!
-                    </p>
-                    <div class="note__bottom">
-                        <span class="note__time">12 Jan</span>
-                        <a href="#" class="note__tag">Tag</a>
+            <nav class="nav-link__wrapper">
+                <a data-show="all" href="#" class="nav-link active">All</a>
+                <a data-show="folder" href="#" class="nav-link">Folder</a>
+            </nav>
+            <div class="main-content__view-port">
+                <div class="main-content show-note">
+                    <div class="note-wrapper">
+                        <ul class="note-list ">
+                            <li class="gutter-sizer"></li>
+                            <li class="message">
+                                <span>There isn't any note yet !</span>
+                            </li>
+                            <!-- <li class="note">
+                                <h1 class="note__title">Title</h1>
+                                <p class="note__content">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi debitis dolorum esse dolorem odio! Enim ullam qui saepe voluptate exercitationem libero minima dolor optio. Quasi repellat ipsa facere reiciendis cumque!
+                                </p>
+                                <div class="note__bottom">
+                                    <span class="note__time">12 Jan</span>
+                                    <a href="#" class="note__tag">Tag</a>
+                                </div>
+                            </li> -->
+                            <a class="add-note add-active"  href="#">
+                                <i class="flaticon-add-file"></i>
+                            </a>
+                        </ul>
+
                     </div>
-                </li> -->
-            </ul>
-            <a id="add-note" class="btn btn-active" href="#">
-                <i class="fa fa-plus" aria-hidden="true"></i>
-            </a>
-            <section class="search-overlay">
+                    <div class="folder-wrapper">
+                        <ul class="folder-list">
+                            <li class="message">
+                                <span>You haven't create any folder yet !</span>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- <section class="search-overlay">
                 <div class="btn-wrapper">
                     <a class="btn close" href="#"></a>
                     <form action="">
                         <input type="search">
                     </form>
                 </div>      
-            </section>
+            </section> -->
             <section class="add-note-overlay">
                 <h1 class="title">Notes</h1>
                 <form id="add-form" action="" class="form">
                     <div class="form-group">
                         <label for="title">Title</label>
-                        <div class="input-field__wrapper">
-                            <input required id="note-title" type="text" name="title" class="input-field">
-                        </div>
+                        <input required id="note-title" type="text" name="title" class="input-field">
                     </div>
                     <div class="form-group">
                         <label for="content">Content</label>
-                        <div class="input-field__wrapper">
-                            <textarea required id="note-content"  name="content" id="content" cols="30" rows="10" class="input-field"></textarea>
-                        </div>
+                        <textarea required id="note-content"  name="content" id="content" cols="30" rows="10" class="input-field"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="tag">Tag</label>
-                        <div class="input-field__wrapper">
-                            <input required id="note-tag"  type="text" name="tag" class="input-field">
-                        </div>
+                        <input required id="note-tag"  type="text" name="tag" class="input-field">
                     </div>
                     <div class="form-group btn-group">
-                        <div class="form-btn__wrapper">
-                            <input id="add_form" type="submit" class="submit-content form-btn " value="Add">
-                        </div>
-                        <div class="form-btn__wrapper">
-                            <input id="close_add_form" type="button" class="close-form form-btn" value="Cancel">
-                        </div>
+                        <input id="add_form" type="submit" class="submit-content form-btn " value="Add">
+                        <input id="close_add_form" type="button" class="close-form form-btn" value="Cancel">
                     </div>
                 </form>
             </section>
