--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="flaticon/font/flaticon.css">
 
-    <link rel="stylesheet" href="css/demo.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- FONT  -->
     <link href="https://fonts.googleapis.com/css2?family=Redressed&family=Poppins:wght@200;400;500;600;700;800&display=swap" rel="stylesheet">
 
@@ -37,13 +37,6 @@
                     <a class="show-add-folder"  href="#">
                         <i class="fa fa-plus" aria-hidden="true"></i>
                     </a>
-                    <!-- <div class="fitler-wrapper">
-                        <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                        <select name="select-tag" id="filter-tag" class="tag">
-                            <option value="all" selected>All</option>
-                        </select>
-                    </div> -->
-
                 </nav>
             </header>
             <nav class="nav-link__wrapper">
@@ -53,8 +46,8 @@
             <div class="main-content__view-port">
                 <div class="main-content show-note">
                     <div class="note-wrapper">
-                        <span class="message">There isn't any note yet !</span>
                         <ul class="note-list ">
+                            <li class="message">There isn't any note yet !</li>
                             <li class="gutter-sizer"></li>
                             <!-- <li class="note">
                                 <h1 class="note__title">Title</h1>
@@ -73,7 +66,7 @@
                         <ul class="folder-list">
                             <li class="gutter-sizer"></li>
                             <li class="message">
-                                <span>You haven't create any folder yet !</span>
+                                You haven't create any folder yet !
                             </li>
                             <!-- <li id="test"  class="folder">
                                 <img src="img/folder.png" alt="">
@@ -85,18 +78,9 @@
 
                 </div>
             </div>
-
-            <!-- <section class="search-overlay">
-                <div class="btn-wrapper">
-                    <a class="btn close" href="#"></a>
-                    <form action="">
-                        <input type="search">
-                    </form>
-                </div>      
-            </section> -->
             <section class="add-note-overlay">
                 <h1 class="title">Notes</h1>
-                <form id="add-note-form" action="" class="form">
+                <form id="add_note_form" action="" class="form">
                     <div class="form-group">
                         <label for="title">Title</label>
                         <input required id="note-title" type="text" name="title" class="input-field">
@@ -117,24 +101,18 @@
             </section>
             <section class="edit-note-overlay">
                 <h1 class="title">Edit</h1>
-                <form id="edit-note" action="" class="form">
+                <form id="edit_note_form" action="" class="form">
                     <div class="form-group">
                         <label for="title">Title</label>
-                        <div class="input-field__wrapper">
-                            <input required id="edit-note-title" type="text" name="title" class="input-field">
-                        </div>
+                        <input required id="edit-note-title" type="text" name="title" class="input-field">
                     </div>
                     <div class="form-group">
                         <label for="content">Content</label>
-                        <div class="input-field__wrapper">
-                            <textarea required id="edit-note-content"  name="content" id="content" cols="30" rows="10" class="input-field"></textarea>
-                        </div>
+                        <textarea required id="edit-note-content"  name="content" id="content" cols="30" rows="10" class="input-field"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="tag">Tag</label>
-                        <div class="input-field__wrapper">
-                            <input required id="edit-note-tag"  type="text" name="tag" class="input-field">
-                        </div>
+                        <input required id="edit-note-tag"  type="text" name="tag" class="input-field">
                     </div>
                     <div class="form-group btn-group">
                         <input id="add_edit" type="submit" class="submit-content form-btn" value="Edit">
@@ -143,7 +121,7 @@
                 </form>
             </section>
             <section class="add-folder-overlay">
-                <form id="add-folder-form" action="" class="form">
+                <form id="create_folder_form" action="" class="form">
                     <div class="form-group">
                         <input required id="folder-title" type="text" class="input-field" placeholder="Folder name" >
                     </div>
@@ -155,7 +133,8 @@
             </section>
         </div>
     </div>
-    <script src="js/demo.js"></script>
+    <!-- <script src="js/demo.js"></script> -->
     <script src="js/isotope/isotope.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
