--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </nav>
             <div class="main-content__view-port">
                 <div class="main-content show-note">
-                    <div class="note-wrapper">
+                    <div class="note-wrapper content-active">
                         <ul class="note-list ">
                             <li class="message">There isn't any note yet !</li>
                             <li class="gutter-sizer"></li>
