--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                     <a class="show-add-folder"  href="#">
                         <i class="fa fa-plus" aria-hidden="true"></i>
                     </a>
+                    <a id="add_note_to_folder" class="btn-folder-section"  href="#">
+                        <i class="fa fa-plus" aria-hidden="true"></i>
+                    </a>
                 </nav>
             </header>
             <nav class="nav-link__wrapper">
