finish edit folder function , fixed remove fragment bug

--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
                     </form>
                 </div>
             </section>
-            <section class="add-folder-overlay">
-                <form autocomplete="off" id="create_folder_form" action="" class="form">
+            <section class="folder-overlay">
+                <form data-submit="" autocomplete="off" id="create_folder_form" action="" class="form">
                     <div class="form-group">
                         <input name="folder-name" required id="folder-title" type="text" class="input-field" placeholder="Folder name" >
                     </div>
                     <div class="form-group btn-group">
-                        <input id="create_folder" type="submit" class="submit-content form-btn" value="Create">
+                        <input id="submit_folder" type="submit" class="submit-content form-btn" value="Create">
                         <input id="close_create_folder" type="button" class="close-form form-btn" value="Cancel">
                     </div>
                 </form>
