remove touch event listenter , add select multipe folder button

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                     <a class="show-add-folder"  href="#">
                         <i class="fa fa-plus" aria-hidden="true"></i>
                     </a>
+                    <a class="select-folder"  href="#">
+                        <i class="fas fa-check    "></i>
+                    </a>
                     <a id="load_note_to_folder" class="btn-folder-section"  href="#">
                         <i class="fa fa-plus" aria-hidden="true"></i>
                     </a>
