--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <img src="img/planet7.png" alt="" class="bg-img">
         <img src="img/bg.png" alt="background png" class="bg bg-dark">
         <img src="img/bg2.png" alt="background png" class="bg bg-light">
+        <img src="img/resize/bg.png" alt="background png" class="bg bg-dark">
+        <img src="img/resize/bg2.png" alt="background png" class="bg bg-light">
     </div>
 
     <!-- BG -->
